# gla

./: .bazelignore  .bazelrc  .clang-format  .gitattributes  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  gla_generator.py  rules.bzl
.github/workflows/: build.yml  clang_format_check.yml  release.yml
examples/: BUILD.bazel  main.c
templates/include/GLA/: gla.h
templates/src/GLA/: gla.c
